[package]
name = "grui"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanovg = { version = "1.0", features = ["gl3"] }
glutin = "0.13.0"
gl = "0.13"
lalrpop-util = "0.17.2"
regex = "0.2.1"

[build-dependencies]
lalrpop = "0.17.2"
